RESOLVED FIXED183109
Various crashes in WebKitTestRunner, especially when system is under heavy load
https://bugs.webkit.org/show_bug.cgi?id=183109
Summary Various crashes in WebKitTestRunner, especially when system is under heavy load
Alexey Proskuryakov
Reported 2018-02-25 12:05:16 PST
WebKitTestRunner has multiple bugs where stack gets corrupted if a message times out. rdar://problem/35109814
Attachments
proposed fix (18.83 KB, patch)
2018-02-25 12:26 PST, Alexey Proskuryakov
thorton: review+
Alexey Proskuryakov
Comment 1 2018-02-25 12:26:36 PST
Created attachment 334583 [details] proposed fix
Tim Horton
Comment 2 2018-02-25 15:12:55 PST
Comment on attachment 334583 [details] proposed fix View in context: https://bugs.webkit.org/attachment.cgi?id=334583&action=review > Tools/ChangeLog:9 > + but it didn't handle them time out did occur. Nearly all of those would result in Grammar around “them time out”
Alexey Proskuryakov
Comment 3 2018-02-25 18:18:43 PST
Note You need to log in before you can comment on or make changes to this bug.